5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1679_1872.log
== TEST (2019-04-30 17:07:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input:"Valor de x: ")
y=float(input:"Valor de y: ")
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((X>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- ERROR:
File "XXXX", line 2
    x=float(input:"Valor de x: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:08:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((X>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((X>0)and(y<0)):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:08:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((X>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((X>0)and(y<0)):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:08:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((X>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((X>0)and(y<0)):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:08:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((X>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((X>0)and(y<0)):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:08:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:09:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:09:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:09:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:09:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif(x==0):
	print('Eixo X')
elif(y==0):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:10:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- EXECUTION TIME:
0.183369
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:11:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:11:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:12:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Valor de x: "))
y=float(input("Valor de y: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- EXECUTION TIME:
0.14647
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:13:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:13:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((x>0)and(y>0)):
	print('Q1')
elif((x<0)and(y>0)):
	print('Q2')
elif((x<0)and(y<0)):
	print('Q3')
elif((x>0)and(y<0)):
	print('Q4')
elif((x==0)and(y!=0)):
	print('Eixo X')
elif((x!=0)and(y==0)):
	print('Eixo Y')
elif((x==0)and(y==0)):
	print('Origem')
-- EXECUTION TIME:
0.197456
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:15:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((Y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:16:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:16:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- EXECUTION TIME:
0.137363
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:39:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:40:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:40:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:40:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
-- EXECUTION TIME:
0.116946
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:41:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
else:
	print('Entrada invalida')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:41:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
else:
	print('Entrada invalida')
-- EXECUTION TIME:
0.148424
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:53:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
else:
	print('Entrada invalida')
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:53:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Valor de y: "))
x=float(input("Valor de x: "))
if((y>0)and(x>0)):
	print('Q1')
elif((y>0)and(x<0)):
	print('Q2')
elif((y<0)and(x<0)):
	print('Q3')
elif((y<0)and(x>0)):
	print('Q4')
elif((y!=0)and(x==0)):
	print('Eixo X')
elif((y==0)and(x!=0)):
	print('Eixo Y')
elif((y==0)and(x==0)):
	print('Origem')
else:
	print('Entrada invalida')
-- EXECUTION TIME:
0.196819
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
